Update new git
